# goldvalley

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
builder/: Cargo.toml
builder/examples/: load.rs
builder/src/: colors.rs  lib.rs
examples/: blend_rgba.rs  sun_time.rs
src/: angle.rs  main.rs  render.rs  sunrise.rs
src/data/: colors.yaml
