[package]
name = "goldvalley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = { version = "0.23.0", features = [], default-features = false }
usvg = { version = "0.23.0", features = ["export"], default-features = false }
tiny-skia = "0.6.5"
chrono = "0.4.22"
sun-times = "0.1.2"
palette = "0.6.1"
clap = { version = "4.0.18", features = ["derive"] }

[build-dependencies]
usvg = { version = "0.23.0", features = ["export"], default-features = false }
const-gen = "1.3.0"
roxmltree = "0.14.1"
yaml-rust = "0.4.5"
builder = { path = "./builder" }
