[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csscolorparser = { version = "0.6.2", default-features = false }
yaml-rust = "0.4.5"
const-gen = "1.3.0"
palette = "0.6.1"

[lib]
name = "builder"
path = "src/lib.rs"
